Tue Oct 14 14:11:04 UTC 2008  Friedhelm Wolf  <fwolf@dre.vanderbilt.edu>

        * MPC/config/dds_wrapper.mpb:
        * wrapper/example/WrapperStockQuoter.m?c
        
          Fixed scoreboard error by moving dds_wrapper.mpb file from
          the wrapper directory to the MPC/config directory and
          renamed MPC project files.

Mon Oct 13 21:36:42 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * dds/InfoRepo/DCPSInfoRepo.mpc:

          Fixed build breakage on static builds of DCPSInfoRepo.

Mon Oct 13 14:27:57 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * dds/tools/federation/Federation.mpc:
        * dds/tools/federation/federation.cpp:

          Fixed compile errors.

Sun Oct 12 04:12:31 UTC 2008  Friedhelm Wolf  <fwolf@dre.vanderbilt.edu>

        * wrappers/*:

          Added new set of wrapper classes to simplify DDS usage in
          applications.

Fri Oct 10 22:39:35 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        * dds/tools:
        * dds/tools/federation:
        * dds/tools/federation/Federation.mpc:
        * dds/tools/federation/federation.cpp:

          Added new command line tool for managing federations.

Fri Oct 10 22:13:49 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * dds/InfoRepo/DCPSInfo_i.h:
        * dds/InfoRepo/DCPSInfo_i.cpp:

          Changed lock_ ACE_Recursive_Thread_Mutex to solve the deadlock
          on linux.

Fri Oct 10 22:15:39 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * java/tests/builtintopics/domain_ids:
        * java/tests/complex_idl/domain_ids:
        * java/tests/messenger/publisher/domain_ids:
        * java/tests/messenger/subscriber/domain_ids:

          Removed these files.  Domain ID files are now depreceated.

Fri Oct 10 20:26:41 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          Corrected an debug logging.

        * dds/DCPS/PublisherImpl.cpp:
        * dds/DCPS/SubscriberImpl.cpp:
